# Simple-3D-Engine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: color.h  general.h  vectors.h
src/: color.c  main.c
